- Update docker compose with mapper service - Add health API in callback service
